--- a/tattoShop/html/82+1.html
+++ b/tattoShop/html/82+1.html
@@ -6,29 +6,64 @@
     <title>Document</title>
     <link rel="stylesheet" href="./../css/82+1.css">
 </head>
-<body>
+<body id="body">
+<!--     <div class="arrowDiv" id="arrow">
+        <img src="./../img/arrowL.png" alt="">
+    </div> -->
     <div class="snsContainer">
         <a href=""><img src="./../img/페이스북아이콘.png" alt=""></a>
         <a target="blank" href="https://github.com/jidole02"><img src="./../img/깃허브아이콘.png" alt=""></a>
         <a href=""><img src="./../img/트위터아이콘.png" alt=""></a>
     </div>
     <header id="header">
-        <p href="">EVTT.</p>
-        <a href="">tattooest</a>
-        <a href="">introduce</a>
-        <a href="">notice</a>
-        <a href="">about</a>
+        <p>EVTT.</p>
+        <a id="button1">introduce</a>
+        <a id="button2">tattooest</a>
+        <a id="button3">notice</a>
+        <a id="button4">about</a>
         <div class="loginBox">
             LOGIN
         </div>
     </header>
-    <section>
-        <a href="">This Page Is Tatto Free World</a><br>
-        <a href="">Just Seeing Here!</a>
-        <button>CONSULTING</button>
-    </section>
-    <div class="arrowDiv" id="arrow">
-        <img src="./../img/arrow.png" alt="">
+
+    <div class="pageContainer" id="pageContainer">
+        <div class="section1">
+            <section>
+                <a href="">This Page Is Tatto Free World</a><br>
+                <a href="">Just Seeing Here!</a>
+                <button id="consulting">CONSULTING</button>
+            </section>
+        </div>
+        <div class="section2">
+            <div class="section2Title">
+                <p>How,<a> All</a> Here?<br>
+                Gather The Best and Best <a href="">Tattooists.</a></p>
+            </div>
+            <div class="introVideo">
+                <div class="introImg">
+                    <img src="./../img/playButton.png" alt="">
+                </div>
+                <br>
+                <a href="">Introduce Best Tattooest</a> <br>
+                <button>GO VIDEO ></button>
+            </div>
+            <div class="tattooistContainer">
+                <div class="titleCircle">
+                    <a href="">Tattoo Share</a>
+                    <a href="">-Seoul Ink-</a>
+                </div>
+                <div id="flex">
+                    <div class="tattooistIntro"></div>
+                    <div class="tattooistIntro"></div>
+                </div>
+                <div id="flex">
+                    <div class="tattooistIntro"></div>
+                    <div class="tattooistIntro"></div>
+                </div>
+            </div>
+        </div>
+        <div class="section3"></div>
+        <div class="section4"></div>
     </div>
     <script src="./../js/82+1.js"></script>
 </body>
