슬라이드기능 완벽구현

--- a/spaceEx/spaceEx.html
+++ b/spaceEx/spaceEx.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./spaceEx.css">
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
-    <img src="./img/png-clipart-earth-earth.png" alt="" class="earth p1">
-    <img src="./img/png-clipart-earth-earth.png" alt="" class="earth">
-    <img src="./img/png-clipart-earth-earth.png" alt="" class="earth">
-    <img src="./img/png-clipart-earth-earth.png" alt="" class="earth">
+    <div class="planet" id="planet">
+        <img src="./img/png-clipart-earth-earth.png" alt="" class="earth p1" id="p1">
+        <img src="./img/png-clipart-earth-earth.png" alt="" class="earth" id="p2">
+        <img src="./img/png-clipart-earth-earth.png" alt="" class="earth" id="p3">
+        <img src="./img/png-clipart-earth-earth.png" alt="" class="earth" id="p4">
+    </div>
     <script src="./spaceEx.js"></script>
 </body>
 </html>
