우주체험 수정본

--- a/spaceEx/spaceEx.html
+++ b/spaceEx/spaceEx.html
@@ -8,11 +8,13 @@
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 </head>
 <body>
+    <div class="introContainer">
+    </div>
     <div class="planet" id="planet">
         <img src="./img/png-clipart-earth-earth.png" alt="" class="earth p1" id="p1">
-        <img src="./img/png-clipart-earth-earth.png" alt="" class="earth" id="p2">
-        <img src="./img/png-clipart-earth-earth.png" alt="" class="earth" id="p3">
-        <img src="./img/png-clipart-earth-earth.png" alt="" class="earth" id="p4">
+        <img src="./img/화성 .png" alt="" class="earth" id="p2">
+        <img src="./img/목성 .png" alt="" class="earth" id="p3">
+        <img src="./img/해왕성 .png" alt="" class="earth" id="p4">
     </div>
     <script src="./spaceEx.js"></script>
 </body>
